<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Squill</string>
    <string name="razorpay_api_key">rzp_test_wOHvzNqK3lI6pN</string>
    <string name="fcm_server_key" translatable="false">fcm_server_key</string>
    <string name="facebook_app_id">184529536828797</string>
    <string name="fb_login_protocol_scheme">fb184529536828797</string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyA867-7uHTkq-MZOCLAb2AT_CDpHTPqc_c</string>
    <string name="freshchat_file_provider_authority">com.satrango.provider</string>
    <string name="trueCallerPartnerKey">kdWMa10c1002b1b604fa0b580d433b9f4ca09</string>
    <string name="userLogin">login</string>
    <string name="userFacebookLogin">facebook</string>
    <string name="userGoogleLogin">google</string>
    <string name="userTrueCallerLogin">truecaller</string>
    <string name="firstLaunch">FirstLaunch</string>
    <string name="userDetails">UserDetails</string>
    <string name="userLoggedVia">UserLoggedVia</string>
    <string name="userId">UserId</string>
    <string name="userReferralId">UserReferralId</string>
    <string name="referralId">Referral Id: </string>
    <string name="phoneNo">phoneNo</string>
    <string name="welcome">Welcome, </string>
    <string name="providerDetails">ProviderDetails</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\t have account?</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="log_in">Log In</string>
    <string name="next_sm">Next</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="welcome_to_on_board">Welcome to On Board!</string>
    <string name="thanks_for_your_interest_but_we_fear_as_we_may_not_be_able_to_cater_some_services_in_your_area_please_do_not_mind_and_please_keep_up_with_us_and_proceed_to_register">Thanks for your interest, But We fear as we may not be able to cater some services in your area. Please do not mind and please keep up with us and proceed to register</string>
    <string name="gps_network_not_enabled">Gps network not enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="fetching_location_please_wait">Fetching Location Please Wait...</string>
    <string name="email">Email (Optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="pause_resume_booking">Pause Resume Booking Status</string>
    <string name="i_agree_to_the_terms_and_conditions_of_satrango_com"><u>I agree to the terms and conditions of Satrango.com</u></string>
    <string name="back">BACK</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_verification_code_sent_to_mobile_number_email">Please type verification code sent to Mobile number / Email</string>
    <string name="didn_t_receive_otp" tools:ignore="StringEscaping">Didn\'t receive OTP?</string>
    <string name="resend">RESEND</string>
    <string name="verify">Verify</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="set_password">Set Password</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="congratulations">Congratulations!</string>
    <string name="login_as">Login As</string>
    <string name="user">User</string>
    <string name="service_provider">Service Provider</string>
    <string name="selected_service_provider">Selected All Service Provider</string>
    <string name="selected_service_provider_single">Selected Service Provider</string>
    <string name="selected_keyword_id">Selected Keyword Id</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_registered_mobile_number_and_we_will_send_you_otp_to_reset_your_password">Please enter your registered mobile number and we will send you OTP to reset your password</string>
    <string name="looks_like_you_haven_t_activated_your_service_provider_account_yet_would_you_like_to_do_it_now">Looks like you haven\t activated your Service Provider Account yet. Would you like to do it now?</string>
    <string name="service_provider_activation">SERVICE PROVIDER ACTIVATION</string>
    <string name="no">NO</string>
    <string name="no_sm">No</string>
    <string name="yes">YES</string>
    <string name="yes_sm">Yes</string>
    <string name="home">HOME</string>
    <string name="profile">Profile</string>
    <string name="get_set">Get.. Set</string>
    <string name="info">Info....</string>
    <string name="your_name">Your Name</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="gender">Gender</string>
    <string name="skills_">Skills...</string>
    <string name="skills">Skills</string>
    <string name="skills_sm">Skills</string>
    <string name="academic_qualification">Academic Qualification</string>
    <string name="languages_known">Languages Known</string>
    <string name="keywords_skills">Keywords / Skills</string>
    <string name="add_skills">Add Skills</string>
    <string name="about_me_min_250_words">About Me (Min 250 Words)</string>
    <string name="tariff">Tariff</string>
    <string name="my_tariff_is">My Tariff is</string>
    <string name="per_hour">Per Hour</string>
    <string name="per_day">Per Day</string>
    <string name="min_charges">Min. Charges</string>
    <string name="extra_charge">Extra Charge</string>
    <string name="extra_charges_applicable_only_for_single_move_categories_during_night_time_peak_timing_bookings"># Extra Charges Applicable Only For Single Move Categories During Night Time/ Peak Timing Bookings</string>
    <string name="my_availability">My Availability</string>
    <string name="you_can_always_use_offline_when_busy">(You can always use offline when busy)</string>
    <string name="slot_1">Slot-1</string>
    <string name="add_more_slots">Add Slot</string>
    <string name="everyday">Everyday</string>
    <string name="week_days">Week-days</string>
    <string name="week_ends">Week-ends</string>
    <string name="choose">Choose</string>
    <string name="from">From</string>
    <string name="from_job_post">From Job Post</string>
    <string name="post_job_id">post_job_id</string>
    <string name="invoice_details">InvoiceDetails</string>
    <string name="instant_booking_sp_count">Instant Booking Sp Count</string>
    <string name="saveInstallmentDetId">saveInstallmentDetId</string>
    <string name="sp_languages">sp_languages</string>
    <string name="sp_professions">sp_professions</string>
    <string name="sp_qualification">sp_qualification</string>
    <string name="sp_timeslots">sp_timeslots</string>
    <string name="to">To</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="_W">W</string>
    <string name="f">F</string>
    <string name="identity_proof">Identity Proof</string>
    <string name="pan_card_aadhar_card">(PAN Card / Aadhar Card)</string>
    <string name="please_hold_your_id_proof_in_your_hand_and_proceed_with_video_verification">Please hold your ID Proof in your hand and proceed with video verification</string>
    <string name="proceed_with_video_verification">Proceed with Video Verification</string>
    <string name="back_sm">Back</string>
    <string name="last_step">last step..</string>
    <string name="please_read_the_below_statements_seeing_your_screen_to_complete_registration">Please read the below statements seeing your screen to complete registration</string>
    <string name="my_name_is">My Name is</string>
    <string name="restart">Restart</string>
    <string name="rec">REC</string>
    <string name="this_is_my_id_proof">This is my ID Proof</string>
    <string name="id_description">I Certify that will neither misbehave with customers nor will cause any damage to user property or reputation of Satrango willfully. If found guilty I will be liable to face the consequences as mentioned in terms and conditions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="provider">Service Provider</string>
    <string name="rs_0_00">Rs.0/-</string>
    <string name="post_a_job">Post a Job</string>
    <string name="my_account">My Account</string>
    <string name="my_booking">My Bookings</string>
    <string name="my_job_posts">My Job Posts</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="offers">Offers</string>
    <string name="alerts">Alerts</string>
    <string name="my_location">My Location</string>
    <string name="faqs">FAQs</string>
    <string name="chats">Chats</string>
    <string name="your_location">Your Location</string>
    <string name="loading">Loading...</string>
    <string name="change_profile">Change Profile</string>
    <string name="search_in_thousands_of_services">Search in thousands of services</string>
    <string name="popular_services">Popular Services</string>
    <string name="view_more">View More</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="browse_categories">Browse Categories</string>
    <string name="categories">Categories</string>
    <string name="change_password">Change Password</string>
    <string name="intro1">Whether you need services like mechanic, electrician, plumbing etc.</string>
    <string name="_4">4</string>
    <string name="skip">Skip</string>
    <string name="to_go">To Go...</string>
    <string name="_0">0</string>
    <string name="booking_id">Booking Id</string>
    <string name="my_bids">My Bids</string>
    <string name="at">at</string>
    <string name="how_you_want_to_search_service_providers">How you want to Search Service Providers?</string>
    <string name="view_results">View Results</string>
    <string name="book_instantly">Book Instantly</string>
    <string name="one_more_step">One More Step</string>
    <string name="my_job_requires">My Job Requires</string>
    <string name="work_at_a_specified_location">Work at a Specified Location</string>
    <string name="ex_office_home_godowns_shops_etc">Ex: Office, Home, Godowns, Shops etc.</string>
    <string name="work_at_multiple_locations">Work at Multiple Locations</string>
    <string name="ex_delivering_couriersm_pick_amp_drop_etc"><![CDATA[Ex: Delivering Couriersm Pick & Drop etc.]]></string>
    <string name="work_online_from_anywhere">Work Online from anywhere</string>
    <string name="ex_app_developments_data_entry_etc">Ex: App Developments, Data entry etc.</string>
    <string name="goals">Goals</string>
    <string name="payment_type">Payment Type</string>
    <string name="pay_in_installments">Pay in Installments</string>
    <string name="single_payment">Single Payment</string>
    <string name="release">Release</string>
    <string name="started_on">Started On</string>
    <string name="total_amount">Total Amount</string>
    <string name="my_training">My Training</string>
</resources>