<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/providerOptHome"
        android:icon="@drawable/ic_home_orange"
        android:title="@string/home" />
    <item
        android:id="@+id/providerOptMyAccount"
        android:icon="@drawable/ic_myaccount_orange"
        android:title="@string/my_account" />
    <item
        android:id="@+id/providerOptMyBooking"
        android:icon="@drawable/ic_mybooking_orange"
        android:title="@string/my_booking" />
    <item
        android:id="@+id/providerOptMyBids"
        android:icon="@drawable/ic_myjob_orange"
        android:title="@string/my_bids" />
    <item
        android:id="@+id/providerOptMyProfile"
        android:icon="@drawable/ic_myprofile_orange"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/providerOptTraining"
        android:icon="@drawable/ic_myprofile_orange"
        android:title="@string/my_training" />
    <item
        android:id="@+id/providerOptSettings"
        android:icon="@drawable/ic_settings_orange"
        android:title="@string/settings" />
    <item
        android:id="@+id/providerOptLogOut"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>