<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/skip" />

    <ImageView
        android:id="@+id/introRowImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_weight="5"
        android:src="@drawable/intro1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/introRowText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_weight="3"
        android:gravity="center"
        android:maxLines="3"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="@string/intro1"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="@dimen/_10sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/indicatorOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/indicatorTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/indicatorThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/indicatorFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/introRowPrevBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/introRowNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>