<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.service_provider.provider_dashboard.drawer_menu.my_bookings.provider_booking_details.release_goals.ProviderReleaseGoalsScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:gravity="start|center"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:layout_width="@dimen/_600sdp"
            android:layout_height="@dimen/_600sdp"
            android:layout_marginStart="-95dp"
            android:layout_marginTop="-100dp"
            android:scaleType="fitXY"
            android:src="@drawable/provider_bg"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:orientation="vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingBottom="@dimen/_50sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textColor="@color/white"
                android:textSize="@dimen/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".06"
                android:text="@string/goals"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/purple_out_line">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_id"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/bookingId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/red"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/started_on"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/workStartedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2021"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/red"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yy"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/red"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="@dimen/text"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rs_0_00"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/text"
            android:textColor="@color/red"/>

    </LinearLayout>

    <View
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_gravity="center"
        android:background="@color/grey_400"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>