<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.user_dashboard.drawer_menu.post_a_job.PostJobTypeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:gravity="start|center"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="@dimen/_600sdp"
                android:layout_height="@dimen/_600sdp"
                android:layout_marginStart="-95dp"
                android:layout_marginTop="-100dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_bg"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:orientation="vertical"
                android:paddingStart="@dimen/_50sdp"
                android:paddingBottom="@dimen/_50sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_more_step"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing=".06"
                    android:text="@string/to_go"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_job_requires"
            android:textSize="@dimen/title"
            android:gravity="center"
            android:textColor="@color/blue"/>

        <LinearLayout
            android:id="@+id/specifiedLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@drawable/user_btn_bg_sm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_at_a_specified_location"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ex_office_home_godowns_shops_etc"
                android:textSize="@dimen/text"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/multiLocationsBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@drawable/user_btn_bg_sm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_at_multiple_locations"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ex_delivering_couriersm_pick_amp_drop_etc"
                android:textSize="@dimen/text"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/onlineBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@drawable/user_btn_bg_sm">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_online_from_anywhere"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ex_app_developments_data_entry_etc"
                android:textSize="@dimen/text"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>