<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:text="@string/how_you_want_to_search_service_providers"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_results"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:textSize="@dimen/text"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/bookInstantly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_instantly"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"
            style="@style/filled_button_style"
            android:background="@drawable/category_bg"
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>